--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,15 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "HTTP_DEBUG_BASE_URL", "\"http:8180\""
+        buildConfigField "String", "HTTP_RELEASE_BASE_URL", "\"http:8181\""
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug{
         }
     }
 }
